[package]
name = "mouse_position_printer"
version = "1.1.0"
edition = "2024"
description = "Mouse activity monitor and automatic desktop refresh tool for Windows"
license = "MIT"
repository = "https://github.com/phonble/keymouse_autoreflash"

[dependencies]
rdev = "0.5"
tokio = { version = "1", features = ["full"] }
